--- a/data/index.html
+++ b/data/index.html
@@ -4,7 +4,7 @@
     <title>Pet Door</title>
 </head>
 <body>
-    <h1>Benvenuto nella Pet Door!</h1>
+    <h1>Benvenuuuto nella Gattaiola Scheggiaribes!</h1>
     <p>Stato Wi-Fi: <span id="wifi-status">Non connesso</span></p>
     <p>RSSI: <span id="rssi">N/A</span> dBm</p>
     <button onclick="connectWebSocket()">Connetti WebSocket</button>
