aggiunta diagnostica porta

--- a/data/config.html
+++ b/data/config.html
@@ -207,7 +207,7 @@
                     <input type="number" id="config_04" min="0">
                 </div>
                 <div class="form-group">
-                    <label for="config_05">Configurazione 05:</label>
+                    <label for="config_05">min chiusura forz.:</label>
                     <input type="number" id="config_05" min="0">
                 </div>
                 <div class="form-group">
