--- a/data/console.html
+++ b/data/console.html
@@ -227,8 +227,9 @@
                 <button class="shortcut-btn" data-cmd="log">log</button>
                 <button class="shortcut-btn" data-cmd="decod">decod</button>
                 <button class="shortcut-btn" data-cmd="time">time</button>
-                <button class="shortcut-btn" data-cmd="ntp status">ntp status</button>
-                <button class="shortcut-btn" data-cmd="ntp now">sync ntp</button>
+                <button class="shortcut-btn" data-cmd="system">system</button>
+                <button class="shortcut-btn" data-cmd="system task">task</button>
+                <button class="shortcut-btn" data-cmd="system flash">flash</button>
                 <button class="shortcut-btn repeat-btn" id="repeatBtn">repeat</button>
             </div>
             
