--- a/data/console.html
+++ b/data/console.html
@@ -209,7 +209,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="title">Console Diagnostica ESP32</div>
+        <div class="title">Console Diagnostica Gattaiola</div>
     </div>
 
     <div class="console-container">
