--- a/data/config.html
+++ b/data/config.html
@@ -211,7 +211,7 @@
                     <input type="number" id="config_05" min="0">
                 </div>
                 <div class="form-group">
-                    <label for="config_06">Configurazione 06:</label>
+                    <label for="config_06">Offset Distanza  :</label>
                     <input type="number" id="config_06" min="0">
                 </div>
                 <div class="form-group">
