--- a/data/config.html
+++ b/data/config.html
@@ -215,7 +215,7 @@
                     <input type="number" id="config_06" min="0">
                 </div>
                 <div class="form-group">
-                    <label for="config_07">Configurazione 07:</label>
+                    <label for="config_07">Duty cycle 134Khz:</label>
                     <input type="number" id="config_07" min="0">
                 </div>
                 <div class="form-group">
